--- a/styles/dashboard.module.scss
+++ b/styles/dashboard.module.scss
@@ -60,14 +60,14 @@
 
 .pageTitle {
   margin-bottom: 1rem;
-  width: 75%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 0.5rem;
 }
 
-.comments {
+.list {
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -75,7 +75,7 @@
   gap: 8px;
 }
 
-.comment {
+.listElement {
   $gap: 8px;
 
   width: 100%;
@@ -106,6 +106,12 @@
 
       h2 {
         text-align: start;
+
+        display: -webkit-box;
+        line-clamp: 3;
+        -webkit-line-clamp: 3;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
       }
 
       p {
@@ -114,6 +120,14 @@
         white-space: nowrap;
       }
     }
+
+    .text {
+      display: -webkit-box;
+      line-clamp: 6;
+      -webkit-line-clamp: 6;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+    }
   }
 
   button {
@@ -121,7 +135,7 @@
 
     opacity: 50%;
     padding: $padding;
-    height: 25px + 2 * $padding;
+    height: 24px + 2 * $padding;
     aspect-ratio: 1/1;
     border-radius: 4px;
     background-color: transparent;
@@ -130,6 +144,12 @@
 
     &:hover {
       opacity: 90%;
+    }
+
+    img {
+      height: 100%;
+      width: auto;
+      aspect-ratio: 1/1;
     }
   }
 }
