--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -6,7 +6,7 @@
 }
 
 :focus-visible {
-  box-shadow: 0 0 1px 1px var(--primary) !important;
+  box-shadow: 0 0 1px 2px var(--primary) !important;
 }
 
 ::placeholder {
